--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
 
 <body>
     <div class="container">
-        <img src="./headphone.jpg" id="product-img" class="product-img">
+        <img src="./bhagvat-geeta.jpeg" id="product-img" class="product-img">
         <p>
-        <h4 class="text-center">V-Moda Crossfade Wireless Over-Ear Headphone</h4>
+        <h4 class="text-center">Srimad Bhagvad Gita (Bhagavat Geeta), Bhagwat Geeta Hindi.</h4>
         </p>
 
         <div class="quantity-container">
-            <img src="./decrement.png" alt="" class="quan-icon" onclick="dec()">
+            <img src="./decrement.jpeg" alt="" class="quan-icon" onclick="dec()">
             <span id="quantity">1</span>
-            <img src="./increment.png" alt="" class="quan-icon" onclick="inc()">
+            <img src="./increment.jpeg" alt="" class="quan-icon" onclick="inc()">
         </div>
     </div>
 
