--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
     .container {
         margin: 20px auto;
         padding: 10px;
-        height: 400px;
-        width: 300px;
-        background-color: #cccccc;
+        height: 450px;
+        width: 200px;
+        background-color: #b3b3ff;
         border-radius: 30px;
-        border: 1px #595959 solid;
+        border: 1px #00004d solid;
+        
     }
 
     .product-img {
@@ -51,7 +52,7 @@
     <div class="container">
         <img src="./bhagvat-geeta.jpeg" id="product-img" class="product-img">
         <p>
-        <h4 class="text-center">Srimad Bhagvad Gita (Bhagavat Geeta), Bhagwat Geeta Hindi.</h4>
+        <h4 class="text-center">Srimad Bhagavad Gita (Bhagavat Geeta), Bhagwat Geeta Hindi.</h4>
         </p>
 
         <div class="quantity-container">
